--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node -r src/app.ts",
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -16,10 +17,16 @@
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.5",
     "@types/swagger-ui-express": "^4.1.3",
+    "babel-jest": "^27.4.5",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
