--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.4",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -25,6 +26,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.5",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/yup": "^0.29.13",
     "babel-jest": "^27.4.5",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
